# otus_rl_hw_04

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh
project/: compare.py  dyna_q.py  frozen_lake_env.py  pyproject.toml  q_learning.py  visualize.py
